openshift/base/infrastructure/jaeger/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: airlines-backend-microservices
  name: airlines-jaeger-service
  labels:
    app: airlines-jaeger
spec:
  selector:
    app: airlines-jaeger
  ports:
    - name: jaeger-ui
      port: 80
      targetPort: 16686
    - name: grpc
      port: 14250
      targetPort: 14250
    - name: otlp
      port: 4317
      targetPort: 4317
